fix: navbar spacing

--- a/pages/login.css
+++ b/pages/login.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-content: center;
-    background-image: url(../images/home-banner-jpeg.jpg);
+    background-image: url(../images/home-banner.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
